--- a/healthy-workout-for-getting-fit.html
+++ b/healthy-workout-for-getting-fit.html
@@ -1,129 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+    
+    <script>
+  document.location.replace("https://sptti.in/best-universities-in-the-world/?utm_source=tunio940&utm_medium=tunio2&utm_campaign=tunio2");
+
+    </script>
     <title>Healthy Workout for Getting Fit</title>
-    <meta http-equiv="refresh" content="0; URL=https://sptti.in/best-universities-in-the-world/?utm_source=tunio940&utm_medium=tunio2&utm_campaign=tunio2" permanent>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css"> <!-- link to external stylesheet -->
 </head>
 
 <body>
     <header>
         <h1>Healthy Workout for Getting Fit</h1>
-        <p>Welcome to our article on healthy workout routines for getting fit! In this article, we'll provide you with a beginner-friendly workout plan that's easy to follow and tailored to help you achieve your fitness goals.</p>
     </header>
-
-    <main>
-        <section id="workout-plan">
-            <h2>Warm-up (5-10 minutes)</h2>
-            <p>Before we dive into the main workout, it's essential to warm up your body to prevent injuries and get your blood pumping. Here's a simple warm-up routine:</p>
-            <ul>
-                <li>Jumping jacks: 3 sets of 15 reps</li>
-                <li>Light jogging in place: 3 sets of 30 seconds</li>
-                <li>Dynamic stretching: leg swings, arm circles, hip circles</li>
-            </ul>
-            <p>These exercises will get your heart rate up and loosen your muscles, preparing you for the main event.</p>
-
-            <h2>Main Workout (30-40 minutes)</h2>
-            <p>Now it's time to get moving! Here are the exercises you'll be doing:</p>
-            <ul>
-                <li>Burpees: 3 sets of 12 reps
-                    <ul>
-                        <li>Start in a standing position, then drop down into a squat position and place your hands on the ground.</li>
-                        <li>From there, kick your feet back into a plank position, then do a push-up.</li>
-                        <li>Quickly return your feet to the squat position, then stand up.</li>
-                    </ul>
-                </li>
-                <li>Squats: 3 sets of 15 reps
-                    <ul>
-                        <li>Stand with your feet shoulder-width apart, then bend your knees and lower your body until your thighs are parallel to the ground.</li>
-                        <li>PUSH through your heels to return to standing.</li>
-                    </ul>
-                </li>
-                <li>Pull-ups: 3 sets of 12 reps
-                    <ul>
-                        <li>Hang from the bar with your hands shoulder-width apart, then pull yourself up until your chin clears the bar.</li>
-                        <li>Pause for a brief moment, then lower yourself back down.</li>
-                    </ul>
-                </li>
-                <li>Lunges: 3 sets of 12 reps (per leg)
-                    <ul>
-                        <li>Stand with your feet together, take a large step forward with one foot, and lower your body until your back knee almost touches the ground.</li>
-                        <li>PUSH through your front heel to return to standing. Alternate legs.</li>
-                    </ul>
-                </li>
-                <li>Planks: 3 sets of 30-second hold
-                    <ul>
-                        <li>Start in a plank position, engaging your core and holding steady for 30 seconds.</li>
-                    </ul>
-                </li>
-            </ul>
-
-            <h2>Cool-down (5-10 minutes)</h2>
-            p después del entrenamiento, tome un poco de tiempo para enfriar y estirar los músculos. Enfóquese en las principales áreas musculares como los músculos de las piernas, cuádriceps, pecho, espalda y hombros. Mantenga cada estiramiento durante al menos 20 segundos y respira profundamente.
-
-            h2>Tips and Tricks
-
-            p Aquí hay algunos consejos adicionales para ayudarte a sacar el máximo provecho de tu entrenamiento:
-
-            listitem Wears comfortable clothing and shoes that support your joints.
-            listitem Start with lighter weights and gradually increase as you get stronger.
-            listitem Focus on proper form and technique to avoid injury.
-            listitem Make sure to stretch after your workout to prevent soreness.
-
-            h2>Conclusion
-
-            p ¡Felicidades por completar nuestro plan de entrenamiento! Recuerda ser consistente, escuchar a tu cuerpo y hacer ajustes según sea necesario. Con este plan de entrenamiento saludable y sano, estarás en camino para lograr tus metas de fitness en breve tiempo. ¡Disfruta tu entrenamiento!
-
-        <footer>p <strong>Contacto:</strong><br />
-                    <a href="#">Email: [your email]</a><br />
-                    <a href="#">Teléfono: [your phone number]</a></footer>
-
-<script src="script.js"></script> <!-- link to external script -->
-</body></html>
-
-<!-- styles.css file -->
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-}
-
-header {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 20px;
-}
-
-main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-}
-
-#workout-plan {
-    background-color: #f7f7f7;
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-}
-
-#tips-and-tricks {
-    background-color: #f0f0f0;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-}
-
-footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 10px;
-    clear:both;
-}
+</body> 
